check button in progress

--- a/front/la_palette_du_gout/index.html
+++ b/front/la_palette_du_gout/index.html
@@ -1,13 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/133c6e54a0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../public/css/style.css">
     <title>OhMyFood</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="../home/index.html"><i class="fa-solid fa-arrow-left heading__arrow"></i></a>
+        <a href="#"><img src="/assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
+        </div>
+    </header>
+    <main>
+        <section id="menu">
+            <img class="menu_image" src="/assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Photo La palette du goût">
+            <div class="menu">
+                <div class="menu_head">
+                    <h2 class="menu_head_title">La palette du goût</h2>
+                    <div class="menu_head_icon">
+                        <i class="fa-regular fa-heart menu_head_icon--empty"><i
+                                class="fa-solid fa-heart menu_head_icon--full"></i></i>
+                    </div>
+                </div>
+                <!------- ENTREES ------->
+                <div class="meal_category">
+                    <h3 class="meal_category_title">Entrées</h3>
+
+                    <div class="meal_category_container--flex">
+
+                        <div class="meal_category_card">
+                            <h4 class="meal_category_card_title">Fricassée d'escargots</h4>
+                            <div class="meal_category_card_infos">
+                                <p class="meal_category_card_description">Au piment d'Espelette</p>
+                            </div>
+                            <div class="meal_category_card_price">
+                                <p class="meal_category_card_price--style">25€</p>
+                            </div>
+                        </div>
+                        <div class="meal_category_card">
+                            <h4 class="meal_category_card_title">Foie gras de canard mi-cuit</h4>
+                            <div class="meal_category_card_infos">
+                                <p class="meal_category_card_description">Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="meal_category_card_price">
+                                <p class="meal_category_card_price--style">35€</p>
+                            </div>
+                        </div>
+                        <div class="meal_category_card">
+                            <h4 class="meal_category_card_title">Œuf au plat</h4>
+                            <div class="meal_category_card_infos">
+                                <p class="meal_category_card_description">Assaisonné à la truffe sur lit de mâche</p>
+                            </div>
+                            <div class="meal_category_card_price">
+                                <p class="meal_category_card_price--style">20€</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!------- PLATS ------->
+                    <div class="meal_category">
+                        <h3 class="meal_category_title">Plats</h3>
+
+                        <div class="meal_category_container--flex">
+
+                            <div class="meal_category_card">
+                                <h4 class="meal_category_card_title">Filet de bœuf aux gerbes</h4>
+                                <div class="meal_category_card_infos">
+                                    <p class="meal_category_card_description">Accompagnées d'une purée de panais</p>
+                                </div>
+                                <div class="meal_category_card_price">
+                                    <p class="meal_category_card_price--style">40€</p>
+                                </div>
+                            </div>
+                            <div class="meal_category_card">
+                                <h4 class="meal_category_card_title">Parmentier de queue de bœuf</h4>
+                                <div class="meal_category_card_infos">
+                                    <p class="meal_category_card_description">À la truffe nois sur sa purée de panais
+                                    </p>
+                                </div>
+                                <div class="meal_category_card_price">
+                                    <p class="meal_category_card_price--style">35€</p>
+                                </div>
+                            </div>
+                            <div class="meal_category_card">
+                                <h4 class="meal_category_card_title">Filet de turbot</h4>
+                                <div class="meal_category_card_infos">
+                                    <p class="meal_category_card_description">Aux agrumes</p>
+                                </div>
+                                <div class="meal_category_card_price">
+                                    <p class="meal_category_card_price--style">44€</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!------- DESSERTS ------->
+                    <div class="meal_category">
+                        <h3 class="meal_category_title">Desserts</h3>
+
+                        <div class="meal_category_container--flex">
+
+                            <div class="meal_category_card">
+                                <h4 class="meal_category_card_title">Paris-Brest</h4>
+                                <div class="meal_category_card_infos">
+                                    <p class="meal_category_card_description">Revisité</p>
+                                </div>
+                                <div class="meal_category_card_price">
+                                    <p class="meal_category_card_price--style">18€</p>
+                                </div>
+                            </div>
+                            <div class="meal_category_card">
+                                <h4 class="meal_category_card_title">Macaron au chocolat d'exception</h4>
+                                <div class="meal_category_card_infos">
+                                    <p class="meal_category_card_description">Et glace à la vanille de Madagascar</p>
+                                </div>
+                                <div class="meal_category_card_price">
+                                    <p class="meal_category_card_price--style">22€</p>
+                                </div>
+                            </div>
+                            <div class="meal_category_card">
+                                <h4 class="meal_category_card_title">Mousse au chocolat</h4>
+                                <div class="meal_category_card_infos">
+                                    <p class="meal_category_card_description">Au piment d'Espelette et à la truffe noire
+                                    </p>
+                                </div>
+                                <div class="meal_category_card_price">
+                                    <p class="meal_category_card_price--style">23€</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu_btn">
+                    <a class="top_content_btn menu_btn-order" href="#">Commander</a>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="infos_footer">
+            <img class="infos_footer_logo" src="/assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+            <div class="infos_footer_mention">
+                <div class="infos_footer_mention--line">
+                    <i class="fa-solid fa-utensils infos_footer_mention--icon1"></i>
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Proposer un restaurant</p>
+                    </a>
+                </div>
+                <div class="infos_footer_mention--line">
+                    <i class="fa-solid fa-handshake-angle infos_footer_mention--icon2"></i>
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Devenir partenaire</p>
+                    </a>
+                </div>
+                <div class="infos_footer_mention--line">
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Mentions légales</p>
+                    </a>
+                </div>
+                <div class="infos_footer_mention--line">
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Contact</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
