--- a/front/home/index.html
+++ b/front/home/index.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/133c6e54a0.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../public/css/style.css">
     <title>OhMyFood</title>
 </head>
@@ -20,87 +17,127 @@
     </header>
     <main>
         <section id="location">
-            <form method="post" action="#">
-                <label for="search"><i class="fa-solid fa-location-dot location__form--icon"></i>
-                    <input class="search_input" type="text" name="search" placeholder="Paris, Belleville">
+            <form class="location" method="post" action="#">
+                <label for="search"><i class="fa-solid fa-location-dot location_form--icon"></i>
+                    <input class="location_search_input" type="text" name="search" placeholder="Paris, Belleville">
                 </label>
         </section>
         <section id="top_content">
             <!-- Top Content -->
             <div class="top_content">
-                <h2>Réservez le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <div class="btn_explore">
+                <h2 class="top_content_title">Réservez le menu qui vous convient</h2>
+                <p class="top_content_subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <div>
+                    <a class="top_content_btn" href="#">Explorer nos restaurants</a>
                 </div>
             </div>
         </section>
         <!-- Operation -->
         <section id="operations">
-            <h2>Fonctionnement</h2>
+            <h2 class="title_test">Fonctionnement</h2>
             <div class="operations">
                 <div class="step">
-                    <div class="step_number"></div>
-                    <i></i>
-                    <p>Choisissez un restaurant</p>
+                    <p class="step_number">1</p>
+                    <i class="fa-solid fa-mobile-screen-button step_icon"></i>
+                    <h3 class="step_title">Choisissez un restaurant</h3>
                 </div>
                 <div class="step">
-                    <div class="step_number"></div>
-                    <i></i>
-                    <p>Composez votre menu</p>
+                    <p class="step_number">2</p>
+                    <i class="fa-solid fa-list-ul step_icon"></i>
+                    <h3 class="step_title">Composez votre menu</h3>
                 </div>
                 <div class="step">
-                    <div class="step_number"></div>
-                    <i></i>
-                    <p>Dégustez au restaurant</p>
+                    <p class="step_number">3</p>
+                    <i class="fa-solid fa-store step_icon"></i>
+                    <h3 class="step_title">Dégustez au restaurant</h3>
                 </div>
             </div>
         </section>
         <!-- Restaurants -->
         <section id="restaurants">
             <div class="restaurants">
-                <h2>Restaurants</h2>
+                <h2 class="restaurants_title">Restaurants</h2>
                 <div class="cards">
-                    <card>
-                        <img src="" alt="">
-                        <div class="sticker"></div>
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <i></i>
-                    </card>
-                    <card>
-                        <img src="" alt="">
-                        <div class="sticker"></div>
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                        <i></i>
-                    </card>
-                    <card>
-                        <img src="" alt="">
-                        <div class="sticker"></div>
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
-                        <i></i>
-                    </card>
-                    <card>
-                        <img src="" alt="">
-                        <div class="sticker"></div>
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                        <i></i>
-                    </card>
+                    <div class="card"><a href="../la_palette_du_gout/index.html">
+                            <img class="card_cover_image"
+                                src="/assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="Photo La palette du goût">
+                            <p class="card_sticker">Nouveau</p>
+                            <h3 class="card_title">La palette du goût</h3>
+                            <p class="card_location">Ménilmontant</p>
+                            <div class="card_icon">
+                                <i class="fa-regular fa-heart card_icon--empty"><i
+                                        class="fa-solid fa-heart card_icon--full"></i></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card"><a href="../la_note_enchantee/index.html">
+                            <img class="card_cover_image" src="/assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                alt="Photo La note enchantée">
+                            <p class="card_sticker">Nouveau</p>
+                            <h3 class="card_title">La note enchantée</h3>
+                            <p class="card_location">Charonne</p>
+                            <div class="card_icon">
+                                <i class="fa-regular fa-heart card_icon--empty"><i
+                                        class="fa-solid fa-heart card_icon--full"></i></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card"><a href="../a_la_francaise/index.html">
+                            <img class="card_cover_image"
+                                src="/assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                alt="Photo À la française">
+                            <h3 class="card_title">À la française</h3>
+                            <p class="card_location">Cité Rouge</p>
+                            <div class="card_icon">
+                                <i class="fa-regular fa-heart card_icon--empty"><i
+                                        class="fa-solid fa-heart card_icon--full"></i></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card"><a href="../le_delice_des_sens/index.html">
+                            <img class="card_cover_image"
+                                src="/assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="Photo Le délice des sens">
+                            <h3 class="card_title">Le délice des sens</h3>
+                            <p class="card_location">Folie-Méricourt</p>
+                            <div class="card_icon">
+                                <i class="fa-regular fa-heart card_icon--empty"><i
+                                        class="fa-solid fa-heart card_icon--full"></i></i>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <div class="card_footer">
-            <h2>ohmyfood</h2>
-            <i></i>
-            <p>Proposer un restaurant</p>
-            <i></i>
-            <p>Devenir partenaire</p>
-            <p>Mentions légales</p>
-            <p>Contact</p>
+        <div class="infos_footer">
+            <img class="infos_footer_logo" src="/assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+            <div class="infos_footer_mention">
+                <div class="infos_footer_mention--line">
+                    <i class="fa-solid fa-utensils infos_footer_mention--icon1"></i>
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Proposer un restaurant</p>
+                    </a>
+                </div>
+                <div class="infos_footer_mention--line">
+                    <i class="fa-solid fa-handshake-angle infos_footer_mention--icon2"></i>
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Devenir partenaire</p>
+                    </a>
+                </div>
+                <div class="infos_footer_mention--line">
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Mentions légales</p>
+                    </a>
+                </div>
+                <div class="infos_footer_mention--line">
+                    <a href="#">
+                        <p class="infos_footer_mention--text">Contact</p>
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
