responsive tout format, ajout effet menu, remaniement des fichiers du projet

--- a/front/home/index.html
+++ b/front/home/index.html
@@ -133,7 +133,7 @@
                     </a>
                 </div>
                 <div class="infos_footer_mention--line">
-                    <a href="#">
+                    <a href="mailto:contact@ohmyfood.fr">
                         <p class="infos_footer_mention--text">Contact</p>
                     </a>
                 </div>
