--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
 </head>
 
 <body>
-    <header>
-        <a href="#"><img src="/assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
+    <!-- Loader -->
+    <div class="loader">
+        <i class="fas fa-utensils loader--icone"></i>
+        <div class="loader--ellipses">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
+    </div>
+
+    <div class="home">
+        <header>
+            <a href="#"><img src="/assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
     </header>
+
 
     <main>
         <section class="location">
@@ -23,7 +34,7 @@
                     <i class="location__form-icon fa-solid fa-location-dot"></i>
                     <input class="location__search-input" type="text" name="search" placeholder="Paris, Belleville">
                 </label>
-        </section>        
+        </section>
         <section class="top-content">
             <div class="top-content__container">
                 <h2 class="top-content__title">Réservez le menu qui vous convient</h2>
@@ -124,35 +135,35 @@
     </main>
     <footer class="footer">
         <div class="footer__content">
-          <img class="footer__logo" src="/assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
-          <div class="footer__mention">
-            <div class="footer__mention-line">
-              <i class="fa-solid fa-utensils footer__mention-icon1"></i>
-              <a href="#">
-                <p class="footer__mention-text">Proposer un restaurant</p>
-              </a>
+            <img class="footer__logo" src="/assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+            <div class="footer__mention">
+                <div class="footer__mention-line">
+                    <i class="fa-solid fa-utensils footer__mention-icon1"></i>
+                    <a href="#">
+                        <p class="footer__mention-text">Proposer un restaurant</p>
+                    </a>
+                </div>
+                <div class="footer__mention-line">
+                    <i class="fa-solid fa-handshake-angle footer__mention-icon2"></i>
+                    <a href="#">
+                        <p class="footer__mention-text">Devenir partenaire</p>
+                    </a>
+                </div>
+                <div class="footer__mention-line">
+                    <a href="#">
+                        <p class="footer__mention-text">Mentions légales</p>
+                    </a>
+                </div>
+                <div class="footer__mention-line">
+                    <a href="mailto:contact@ohmyfood.fr">
+                        <p class="footer__mention-text">Contact</p>
+                    </a>
+                </div>
             </div>
-            <div class="footer__mention-line">
-              <i class="fa-solid fa-handshake-angle footer__mention-icon2"></i>
-              <a href="#">
-                <p class="footer__mention-text">Devenir partenaire</p>
-              </a>
-            </div>
-            <div class="footer__mention-line">
-              <a href="#">
-                <p class="footer__mention-text">Mentions légales</p>
-              </a>
-            </div>
-            <div class="footer__mention-line">
-              <a href="mailto:contact@ohmyfood.fr">
-                <p class="footer__mention-text">Contact</p>
-              </a>
-            </div>
-          </div>
         </div>
-      </footer>
-      
-    
+    </footer>
+    </div>
+
 </body>
 
 </html>
