--- a/menuALaFrancaise.html
+++ b/menuALaFrancaise.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/133c6e54a0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>OhMyFood</title>
 </head>
 
 <body>
     <header>
         <a href="index.html"><i class="fa-solid fa-arrow-left heading__arrow"></i></a>
-        <a href="#"><img src="/assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
+        <a href="#"><img src="assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
         </div>
     </header>
     <main>
         <article class="menu">
-            <img class="menu__image" src="/assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            <img class="menu__image" src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="Photo À la française">
             <div class="menu__bloc">
                 <div class="menu__bloc__head">
@@ -181,7 +181,7 @@
     </main>
     <footer class="footer">
         <div class="footer__content">
-            <img class="footer__logo" src="/assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+            <img class="footer__logo" src="assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
             <div class="footer__mention">
                 <div class="footer__mention-line">
                     <i class="fa-solid fa-utensils footer__mention-icon1"></i>
