--- a/menuLaPaletteDuGout.html
+++ b/menuLaPaletteDuGout.html
@@ -37,7 +37,7 @@
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
                                         <h4 class="menu__card__title">Fricassée d'escargots</h4>
-                                        <p class="menu__card__description">>Au piment d'Espelette</p>
+                                        <p class="menu__card__description">Au piment d'Espelette</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">25€</p>
