--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 
     <main>
-        <section class="location">
+        <div class="location">
             <form class="location__form" method="post" action="#">
                 <label for="search">
                     <i class="location__form-icon fa-solid fa-location-dot"></i>
-                    <input class="location__search-input" type="text" name="search" placeholder="Paris, Belleville">
+                    <input class="location__search-input" id="search" type="text" name="search" placeholder="Paris, Belleville">
                 </label>
-        </section>
+            </div>
         <section class="top-content">
             <div class="top-content__container">
                 <h2 class="top-content__title">Réservez le menu qui vous convient</h2>
