--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <i class="location__form-icon fa-solid fa-location-dot"></i>
                     <input class="location__search-input" id="search" type="text" name="search" placeholder="Paris, Belleville">
                 </label>
-            </div>
+            </form>
+        </div>
         <section class="top-content">
             <div class="top-content__container">
                 <h2 class="top-content__title">Réservez le menu qui vous convient</h2>
