add position fixed to loader, remove unnecessary divs, rework operations section and footer

--- a/menuLeDeliceDesSens.html
+++ b/menuLeDeliceDesSens.html
@@ -23,14 +23,14 @@
             <div class="menu__bloc">
                 <div class="menu__bloc__head">
                     <h2 class="menu__bloc__head__title">Le délice des sens</h2>
-                    <div class="menu__bloc__head--icon">
+                    <span class="menu__bloc__head--icon">
                         <i class="fa-regular fa-heart menu__bloc__head--empty"><i
                                 class="fa-solid fa-heart menu__bloc__head--full"></i></i>
-                    </div>
+                    </span>
                 </div>
                 <!------- ENTREES ------->
                 <div class="menu__meal-category">
-                    <div class="menu__meal-category--flex">
+                    <section class="menu__meal-category--flex">
                         <h3 class="menu__meal-category__title">Entrées</h3>
                         <div class="menu__meal-category__container-flex">
                             <div class="menu__card delay1">
@@ -76,9 +76,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                     <!------- PLATS ------->
-                    <div class="menu__meal-category--flex">
+                    <section class="menu__meal-category--flex">
                         <h3 class="menu__meal-category__title">Plats</h3>
                         <div class="menu__meal-category__container-flex">
                             <div class="menu__card delay1">
@@ -124,9 +124,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                     <!------- DESSERTS ------->
-                    <div class="menu__meal-category--flex">
+                    <section class="menu__meal-category--flex">
                         <h3 class="menu__meal-category__title">Desserts</h3>
                         <div class="menu__meal-category__container-flex">
                             <div class="menu__card delay1">
@@ -172,7 +172,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
                 <div class="menu__btn">
                     <a class="top_content_btn menu__btn--order" href="#">Commander</a>
@@ -180,32 +180,30 @@
         </article>
     </main>
     <footer class="footer">
-        <div class="footer__content">
-            <img class="footer__logo" src="assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
-            <div class="footer__mention">
-                <div class="footer__mention-line">
-                    <i class="fa-solid fa-utensils footer__mention-icon1"></i>
-                    <a href="#">
+        <img class="footer__logo" src="assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+        <div class="footer__mention">
+            <ul class="footer__mention-line">
+                <li><i class="fa-solid fa-utensils footer__mention-icon1"></i></li>
+                <li><a href="#">
                         <p class="footer__mention-text">Proposer un restaurant</p>
-                    </a>
-                </div>
-                <div class="footer__mention-line">
-                    <i class="fa-solid fa-handshake-angle footer__mention-icon2"></i>
-                    <a href="#">
+                    </a></li>
+            </ul>
+            <ul class="footer__mention-line">
+                <li><i class="fa-solid fa-handshake-angle footer__mention-icon2"></i></li>
+                <li><a href="#">
                         <p class="footer__mention-text">Devenir partenaire</p>
-                    </a>
-                </div>
-                <div class="footer__mention-line">
-                    <a href="#">
+                    </a></li>
+            </ul>
+            <ul class="footer__mention-line">
+                <li><a href="#">
                         <p class="footer__mention-text">Mentions légales</p>
-                    </a>
-                </div>
-                <div class="footer__mention-line">
-                    <a href="mailto:contact@ohmyfood.fr">
+                    </a></li>
+            </ul>
+            <ul class="footer__mention-line">
+                <li><a href="mailto:contact@ohmyfood.fr">
                         <p class="footer__mention-text">Contact</p>
-                    </a>
-                </div>
-            </div>
+                    </a></li>
+            </ul>
         </div>
     </footer>
 </body>
