--- a/index.html
+++ b/index.html
@@ -22,143 +22,139 @@
     <div class="home">
         <header>
             <a href="#"><img src="assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
-    </header>
-    <main>
-        <div class="location">
-            <form class="location__form" method="post" action="#">
-                <label for="search">
-                    <i class="location__form-icon fa-solid fa-location-dot"></i>
-                    <input class="location__search-input" id="search" type="text" name="search" placeholder="Paris, Belleville">
-                </label>
-            </form>
-        </div>
-        <section class="top-content">
-            <div class="top-content__container">
+        </header>
+        <main>
+            <div class="location">
+                <form class="location__form" method="post" action="#">
+                    <label for="search">
+                        <i class="location__form-icon fa-solid fa-location-dot"></i>
+                        <input class="location__search-input" id="search" type="text" name="search"
+                            placeholder="Paris, Belleville">
+                    </label>
+                </form>
+            </div>
+            <section class="top-content">
                 <h2 class="top-content__title">Réservez le menu qui vous convient</h2>
                 <p class="top-content__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <div class="top-content__btn-container">
                     <a class="top-content__btn" href="#">Explorer nos restaurants</a>
                 </div>
-            </div>
-        </section>
-        <section class="operations">
-            <h2 class="operations__title">Fonctionnement</h2>
-            <div class="operations__steps">
-                <div class="operations__step">
-                    <i class="fa-solid fa-mobile-screen-button operations__step-icon"></i>
-                    <h3 class="operations__step-title">Choisissez un restaurant</h3>
-                    <div class="operations__step-number">
-                        <p class="operations__step-number-text">1</p>
-                    </div>
+            </section>
+            <section class="operations">
+                <h2 class="operations__title">Fonctionnement</h2>
+                <div class="operations__steps">
+                    <ul class="operations__step" data-number="1">
+                        <li><i class="fa-solid fa-mobile-screen-button operations__step-icon"></i></li>
+                        <li>
+                            <p class="operations__step-title">Choisissez un restaurant</p>
+                        </li>
+                    </ul>
+                    <ul class="operations__step" data-number="2">
+                        <li><i class="fa-solid fa-list-ul operations__step-icon"></i></li>
+                        <li>
+                            <p class="operations__step-title">Composez votre menu</p>
+                        </li>
+                    </ul>
+                    <ul class="operations__step" data-number="3">
+                        <li><i class="fa-solid fa-store operations__step-icon"></i></li>
+                        <li>
+                            <p class="operations__step-title">Dégustez au restaurant</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="operations__step">
-                    <i class="fa-solid fa-list-ul operations__step-icon"></i>
-                    <h3 class="operations__step-title">Composez votre menu</h3>
-                    <div class="operations__step-number">
-                        <p class="operations__step-number-text">2</p>
-                    </div>
+            </section>
+            <section class="restaurants">
+                <h2 class="restaurants__title">Restaurants</h2>
+                <div class="restaurants__cards">
+                    <article class="restaurants__card">
+                        <a href="menuLaPaletteDuGout.html">
+                            <img class="restaurants__card-cover_image"
+                                src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="Photo La palette du goût">
+                            <p class="restaurants__card-sticker">Nouveau</p>
+                            <h3 class="restaurants__card-title">La palette du goût</h3>
+                            <p class="restaurants__card-location">Ménilmontant</p>
+                        </a>
+                        <span class="restaurants__card--icon">
+                            <i class="fa-regular fa-heart restaurants__card--empty">
+                                <i class="fa-solid fa-heart restaurants__card--full"></i>
+                            </i>
+                        </span>
+                    </article>
+                    <article class="restaurants__card">
+                        <a href="menuLaNoteEnchantee.html">
+                            <img class="restaurants__card-cover_image"
+                                src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                alt="Photo La note enchantée">
+                            <p class="restaurants__card-sticker">Nouveau</p>
+                            <h3 class="restaurants__card-title">La note enchantée</h3>
+                            <p class="restaurants__card-location">Charonne</p>
+                        </a>
+                        <span class="restaurants__card--icon">
+                            <i class="fa-regular fa-heart restaurants__card--empty">
+                                <i class="fa-solid fa-heart restaurants__card--full"></i>
+                            </i>
+                        </span>
+                    </article>
+                    <article class="restaurants__card">
+                        <a href="menuALaFrancaise.html">
+                            <img class="restaurants__card-cover_image"
+                                src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                alt="Photo À la française">
+                            <h3 class="restaurants__card-title">À la française</h3>
+                            <p class="restaurants__card-location">Cité Rouge</p>
+                        </a>
+                        <span class="restaurants__card--icon">
+                            <i class="fa-regular fa-heart restaurants__card--empty">
+                                <i class="fa-solid fa-heart restaurants__card--full"></i>
+                            </i>
+                        </span>
+                    </article>
+                    <article class="restaurants__card">
+                        <a href="menuLeDeliceDesSens.html">
+                            <img class="restaurants__card-cover_image"
+                                src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="Photo Le délice des sens">
+                            <h3 class="restaurants__card-title">Le délice des sens</h3>
+                            <p class="restaurants__card-location">Folie-Méricourt</p>
+                        </a>
+                        <span class="restaurants__card--icon">
+                            <i class="fa-regular fa-heart restaurants__card--empty">
+                                <i class="fa-solid fa-heart restaurants__card--full"></i>
+                            </i>
+                        </span>
+                    </article>
                 </div>
-                <div class="operations__step">
-                    <i class="fa-solid fa-store operations__step-icon"></i>
-                    <h3 class="operations__step-title">Dégustez au restaurant</h3>
-                    <div class="operations__step-number">
-                        <p class="operations__step-number-text">3</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="restaurants">
-            <h2 class="restaurants__title">Restaurants</h2>
-            <div class="restaurants__cards">
-                <article class="restaurants__card">
-                    <a href="menuLaPaletteDuGout.html">
-                        <img class="restaurants__card-cover_image"
-                            src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="Photo La palette du goût">
-                        <p class="restaurants__card-sticker">Nouveau</p>
-                        <h3 class="restaurants__card-title">La palette du goût</h3>
-                        <p class="restaurants__card-location">Ménilmontant</p>
-                    </a>
-                    <div class="restaurants__card--icon">
-                        <i class="fa-regular fa-heart restaurants__card--empty">
-                            <i class="fa-solid fa-heart restaurants__card--full"></i>
-                        </i>
-                    </div>
-                </article>
-                <article class="restaurants__card">
-                    <a href="menuLaNoteEnchantee.html">
-                        <img class="restaurants__card-cover_image"
-                            src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo La note enchantée">
-                        <p class="restaurants__card-sticker">Nouveau</p>
-                        <h3 class="restaurants__card-title">La note enchantée</h3>
-                        <p class="restaurants__card-location">Charonne</p>
-                    </a>
-                    <div class="restaurants__card--icon">
-                        <i class="fa-regular fa-heart restaurants__card--empty">
-                            <i class="fa-solid fa-heart restaurants__card--full"></i>
-                        </i>
-                    </div>
-                </article>
-                <article class="restaurants__card">
-                    <a href="menuALaFrancaise.html">
-                        <img class="restaurants__card-cover_image"
-                            src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt="Photo À la française">
-                        <h3 class="restaurants__card-title">À la française</h3>
-                        <p class="restaurants__card-location">Cité Rouge</p>
-                    </a>
-                    <div class="restaurants__card--icon">
-                        <i class="fa-regular fa-heart restaurants__card--empty">
-                            <i class="fa-solid fa-heart restaurants__card--full"></i>
-                        </i>
-                    </div>
-                </article>
-                <article class="restaurants__card">
-                    <a href="menuLeDeliceDesSens.html">
-                        <img class="restaurants__card-cover_image"
-                            src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="Photo Le délice des sens">
-                        <h3 class="restaurants__card-title">Le délice des sens</h3>
-                        <p class="restaurants__card-location">Folie-Méricourt</p>
-                    </a>
-                    <div class="restaurants__card--icon">
-                        <i class="fa-regular fa-heart restaurants__card--empty">
-                            <i class="fa-solid fa-heart restaurants__card--full"></i>
-                        </i>
-                    </div>
-                </article>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <div class="footer__content">
+            </section>
+        </main>
+        <footer class="footer">
             <img class="footer__logo" src="assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
             <div class="footer__mention">
-                <div class="footer__mention-line">
-                    <i class="fa-solid fa-utensils footer__mention-icon1"></i>
-                    <a href="#">
-                        <p class="footer__mention-text">Proposer un restaurant</p>
-                    </a>
-                </div>
-                <div class="footer__mention-line">
-                    <i class="fa-solid fa-handshake-angle footer__mention-icon2"></i>
-                    <a href="#">
-                        <p class="footer__mention-text">Devenir partenaire</p>
-                    </a>
-                </div>
-                <div class="footer__mention-line">
-                    <a href="#">
-                        <p class="footer__mention-text">Mentions légales</p>
-                    </a>
-                </div>
-                <div class="footer__mention-line">
-                    <a href="mailto:contact@ohmyfood.fr">
-                        <p class="footer__mention-text">Contact</p>
-                    </a>
-                </div>
+                <ul class="footer__mention-line">
+                    <li><i class="fa-solid fa-utensils footer__mention-icon1"></i></li>
+                    <li><a href="#">
+                            <p class="footer__mention-text">Proposer un restaurant</p>
+                        </a></li>
+                </ul>
+                <ul class="footer__mention-line">
+                    <li><i class="fa-solid fa-handshake-angle footer__mention-icon2"></i></li>
+                    <li><a href="#">
+                            <p class="footer__mention-text">Devenir partenaire</p>
+                        </a></li>
+                </ul>
+                <ul class="footer__mention-line">
+                    <li><a href="#">
+                            <p class="footer__mention-text">Mentions légales</p>
+                        </a></li>
+                </ul>
+                <ul class="footer__mention-line">
+                    <li><a href="mailto:contact@ohmyfood.fr">
+                            <p class="footer__mention-text">Contact</p>
+                        </a></li>
+                </ul>
             </div>
-        </div>
-    </footer>
+        </footer>
     </div>
 </body>
+
 </html>
