refacto files menu, fix html menus

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__cards">
                     <article class="restaurants__card">
-                        <a href="menuLaPaletteDuGout.html">
+                        <a href="pages/menuLaPaletteDuGout.html">
                             <img class="restaurants__card-cover_image"
                                 src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="Photo La palette du goût">
@@ -82,7 +82,7 @@
                         </span>
                     </article>
                     <article class="restaurants__card">
-                        <a href="menuLaNoteEnchantee.html">
+                        <a href="pages/menuLaNoteEnchantee.html">
                             <img class="restaurants__card-cover_image"
                                 src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                 alt="Photo La note enchantée">
@@ -97,7 +97,7 @@
                         </span>
                     </article>
                     <article class="restaurants__card">
-                        <a href="menuALaFrancaise.html">
+                        <a href="pages/menuALaFrancaise.html">
                             <img class="restaurants__card-cover_image"
                                 src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                 alt="Photo À la française">
@@ -111,7 +111,7 @@
                         </span>
                     </article>
                     <article class="restaurants__card">
-                        <a href="menuLeDeliceDesSens.html">
+                        <a href="pages/menuLeDeliceDesSens.html">
                             <img class="restaurants__card-cover_image"
                                 src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="Photo Le délice des sens">
