--- a/pages/menuLaPaletteDuGout.html
+++ b/pages/menuLaPaletteDuGout.html
@@ -6,23 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/133c6e54a0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="/public/css/style.css">
     <title>OhMyFood</title>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><i class="fa-solid fa-arrow-left heading__arrow"></i></a>
-        <a href="#"><img src="assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
-        </div>
+        <a href="/index.html"><i class="fa-solid fa-arrow-left heading__arrow"></i></a>
+        <a href="#"><img src="/assets/img/logo/ohmyfood.png" alt="Logo ohmyfood" class="logo_omf"></a>
     </header>
     <main>
         <article class="menu">
-            <img class="menu__image" src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="Photo À la française">
+            <img class="menu__image" src="/assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Photo La palette du goût">
             <div class="menu__bloc">
                 <div class="menu__bloc__head">
-                    <h2 class="menu__bloc__head__title">À la française</h2>
+                    <h2 class="menu__bloc__head__title">La palette du goût</h2>
                     <span class="menu__bloc__head--icon">
                         <i class="fa-regular fa-heart menu__bloc__head--empty"><i
                                 class="fa-solid fa-heart menu__bloc__head--full"></i></i>
@@ -36,43 +35,43 @@
                             <div class="menu__card delay1">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Tartare de Poulpe acidulé</h4>
-                                        <p class="menu__card__description">Aux zestes d'orange</p>
+                                        <h4 class="menu__card__title">Fricassée d'escargots</h4>
+                                        <p class="menu__card__description">Au piment d'Espelette</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">25€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="menu__card delay2">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Veloutés de légumes</h4>
-                                        <p class="menu__card__description">Carotte, panais, topinambour</p>
+                                        <h4 class="menu__card__title">Foie gras de canard mi-cuit</h4>
+                                        <p class="menu__card__description">Et ses copeaux de truffe noire</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">35€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="menu__card delay3">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Soupe à l'oignon</h4>
-                                        <p class="menu__card__description">Revisitée</p>
+                                        <h4 class="menu__card__title">Œuf au plat</h4>
+                                        <p class="menu__card__description">Assaisonné à la truffe sur lit de mâche</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">20€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -84,43 +83,43 @@
                             <div class="menu__card delay1">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Coquilles Saint-Jacques</h4>
+                                        <h4 class="menu__card__title">Filet de bœuf aux gerbes</h4>
                                         <p class="menu__card__description">Accompagnées d'une purée de panais</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">40€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="menu__card delay2">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Magret de canard</h4>
-                                        <p class="menu__card__description">Et parmentier de pommes de terre</p>
+                                        <h4 class="menu__card__title">Parmentier de queue de bœuf</h4>
+                                        <p class="menu__card__description">À la truffe nois sur sa purée de panais</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">35€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="menu__card delay3">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Pigeonneau d'Ille-et Vilaine</h4>
-                                        <p class="menu__card__description">Sur son lit de gnocchis aux légumes</p>
+                                        <h4 class="menu__card__title">Filet de turbot</h4>
+                                        <p class="menu__card__description">Aux agrumes</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">44€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -132,43 +131,44 @@
                             <div class="menu__card delay1">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Pétales de violettes glacés</h4>
-                                        <p class="menu__card__description">Et purée de noisettes</p>
+                                        <h4 class="menu__card__title">Paris-Brest</h4>
+                                        <p class="menu__card__description">Revisitée</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">18€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="menu__card delay2">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Fondant au chocolat</h4>
-                                        <p class="menu__card__description">Revisitée</p>
+                                        <h4 class="menu__card__title">Macaron au chocolat d'exception</h4>
+                                        <p class="menu__card__description">Et glace à la vanille de Madagascar</p>
                                     </div>
                                     <div class="menu__card__price">
                                         <p class="menu__card__price-text">22€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                             <div class="menu__card delay3">
                                 <div class="menu__card__box">
                                     <div class="menu__card__infos">
-                                        <h4 class="menu__card__title">Millefeuille croustillant</h4>
-                                        <p class="menu__card__description">Myrtilles et pâte d'amande</p>
+                                        <h4 class="menu__card__title">Mousse au chocolat</h4>
+                                        <p class="menu__card__description">Au piment d'Espelette et à la truffe noire
+                                        </p>
                                     </div>
                                     <div class="menu__card__price">
-                                        <p class="menu__card__price-text">20€</p>
+                                        <p class="menu__card__price-text">23€</p>
                                     </div>
-                                    <div class="menu__card__select">
+                                    <span class="menu__card__select">
                                         <i class="fa-solid fa-check menu__card__select-icon"></i>
-                                    </div>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -177,10 +177,11 @@
                 <div class="menu__btn">
                     <a class="top_content_btn menu__btn--order" href="#">Commander</a>
                 </div>
+            </div>
         </article>
     </main>
     <footer class="footer">
-        <img class="footer__logo" src="assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+        <img class="footer__logo" src="/assets/img/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
         <div class="footer__mention">
             <ul class="footer__mention-line">
                 <li><i class="fa-solid fa-utensils footer__mention-icon1"></i></li>
